# movie_library

./: .ERR  .gitignore  CMakeLists.txt  documentary_movie.cpp  documentary_movie.h  family_movie.cpp  family_movie.h  interface.cpp  interface.h  library.cpp  library.h  list.hpp  log_out.cpp  log_out.h  main.cpp  memtrace.cpp  memtrace.h  menu.cpp  menu.h  movie.cpp  movie.h  movie_library.cbp  serializable.h
